# Smart-Support-Agent

./: .gitignore  Dockerfile  LICENSE  README.md  config.yml  domain.yml  index.html  pyproject.toml  scripts.js  style.css
.backup/: domain_backup.yml
.rasa/cache/: cache.db
.rasa/cache/tmp0_5k2s_w/: memorized_turns.json
.rasa/cache/tmp7ctzwolx/: vocabularies.json
.rasa/cache/tmp7kfcib4_/: vocabularies.json
.rasa/cache/tmp_ttk1plb/: featurizer.json  unexpected_intent_policy.data_example.st  unexpected_intent_policy.data_example_metadata.json  unexpected_intent_policy.fake_features_metadata.json  unexpected_intent_policy.label_quantiles.st  unexpected_intent_policy.tf_model.data-00000-of-00001  unexpected_intent_policy.tf_model.index
.rasa/cache/tmpiwhk9o78/: memorized_turns.json
.rasa/cache/tmpsdf18foe/: rule_policy.json
actions/: action_fallback_to_transformer.py  actions.py  policy_show_action.py  product_check_stock_action.py  product_recommend_action.py  product_show_available_action.py  product_show_offers_action.py  user_feedback_action.py  utils.py
chat-ui/: index.html  scripts.js  style.css
data/: nlu.yml  rules.yml  stories.yml
data/nlu/: affirm.yml  faq_returns_nlu.yml  faq_shipping_nlu.yml  faq_warranty_nlu.yml  feedback_negative_nlu.yml  feedback_positive_nlu.yml  goodbyes_nlu.yml  greetings_nlu.yml  nlu.yml  offers_nlu.yml  product_inquiry_nlu.yml  product_recommendation_nlu.yml  smalltalk.yml  stock_check_nlu.yml  thank_you_nlu.yml
data/stories/: stories_greetings.yml  stories_policy_inquiries.yml  stories_product_discovery.yml
(+14 files in other folders)
