[project]
name = "smart-support-agent"
version = "0.1.0"
description = "A demo project for your custom sales and customer care chatbot"
authors = [
    {name = "Aviraj Saha",email = "aviraj.saha@outlook.com"}
]
license = {text = "The MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
